tests/more_generics/more_generics.exp
Error ----------------------------------------------------------------------------------------------------- poly.js:3:36

Cannot return `x` because `T` [1] is incompatible with `S` [2].

   poly.js:3:36
   3| function foo2<T,S>(x:T):S { return x; }
                                         ^

References:
   poly.js:3:22
   3| function foo2<T,S>(x:T):S { return x; }
                           ^ [1]
   poly.js:3:25
   3| function foo2<T,S>(x:T):S { return x; }
                              ^ [2]


Error ---------------------------------------------------------------------------------------------------- poly.js:10:38

Cannot return `x` because `T` [1] is incompatible with `T` [1] in array element.

   poly.js:10:38
   10| function foo5<T>():Array<T> { return x; }
                                            ^

References:
   poly.js:10:26
   10| function foo5<T>():Array<T> { return x; }
                                ^ [1]


Error ---------------------------------------------------------------------------------------------------- poly.js:20:34

Cannot return `foo5()` because array type [1] is incompatible with `R` [2].

   poly.js:20:34
   20| function foo7<R>(x:R):R { return foo5(); }
                                        ^^^^^^

References:
   poly.js:10:20
   10| function foo5<T>():Array<T> { return x; }
                          ^^^^^^^^ [1]
   poly.js:20:23
   20| function foo7<R>(x:R):R { return foo5(); }
                             ^ [2]


Error ----------------------------------------------------------------------------------------------------- poly.js:24:3

Cannot call `y` because `U` [1] is not a function.

   poly.js:24:3
   24|   y();
         ^^^

References:
   poly.js:22:20
   22| function foo8<U>(x:U,y):U {
                          ^ [1]



Found 4 errors
